--- a/.config/nvim/dein/.dein_lazy.toml
+++ b/.config/nvim/dein/.dein_lazy.toml
@@ -1,4 +1,12 @@
 [[plugins]]
 repo = 'Shougo/neocomplete'
-if = 'has("lua")'
-on_i = 1
+
+[[plugins]]
+repo = 'Shogo/neomru.vim'
+
+[[plugins]]
+repo = 'Shougo/unite.vim'
+depends = 'neomru.vim'
+
+[[plugins]]
+repo = 'scrooloose/nerdtree'
