--- a/.config/nvim/dein/.dein_lazy.toml
+++ b/.config/nvim/dein/.dein_lazy.toml
@@ -16,3 +16,12 @@ depends = 'neomru.vim'
 
 [[plugins]]
 repo = 'scrooloose/nerdtree'
+
+[[plugins]]
+repo = 'tpope/vim-rails'
+
+[[plugins]]
+repo = 'tpope/vim-endwise'
+
+[[plugins]]
+repo = 'slim-template/vim-slim'
